--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,7 +165,7 @@ z-index: 1;
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background: url('/w3_band/assets/img/slider/chicago.jpg') top center / cover no-repeat;
+    background: url('../img/slider/chicago.jpg') top center / cover no-repeat;
 
 }
 
